--- a/SimTECH/SimTECH/Pages/Racing/Qualifying.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Qualifying.razor
@@ -53,7 +53,7 @@
     int entryCutoff;
     int progressCutoff;
     int highestScore;
-    int lowestScore;
+    int lowestScore = int.MaxValue;
 
     double gapMarge;
 
