--- a/SimTECH/SimTECH/Pages/Racing/GapChartDialog.razor
+++ b/SimTECH/SimTECH/Pages/Racing/GapChartDialog.razor
@@ -4,10 +4,10 @@
         <MudText Typo="Typo.h5">Gapper race chart</MudText>
     </TitleContent>
     <DialogContent>
-        <MudPaper MinHeight="700px" MinWidth="800px" Class="pa-4">
+        <MudPaper MinWidth="900px" MinHeight="700px" Class="pa-4">
             @if (!loading)
             {
-                <ApexCharts.ApexChart TItem="DataPoint" Title="Gaps to leader" Options="@options" Height="800" Width="@("100%")">
+                <ApexCharts.ApexChart TItem="DataPoint" Title="Gaps to leader" Options="@options" Height="700" Width="900">
                     @foreach (var driver in dataSets)
                     {
                         <ApexCharts.ApexPointSeries TItem="DataPoint"
