--- a/SimTECH/SimTECH/Pages/Racing/Landing.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Landing.razor
@@ -134,12 +134,11 @@
     </MudItem>
     <MudItem xs="2">
         <MudPaper Class="pa-4 mud-height-full">
-            <MudText Typo="Typo.h5">???</MudText>
+            <MudText Typo="Typo.h5">idk man</MudText>
             <MudDivider />
-            <MudText Typo="Typo.body2" Color="Color.Error" Class="mb-1">Wtf am I going to put here?</MudText>
 
             <MudText>
-                You're an absolute blithering idiot.
+                He who reads is not a giraffe
             </MudText>
 
             <MudText Typo="Typo.body2" Color="Color.Info">
