--- a/SimTECH/SimTECH/Pages/Racing/PostRace.razor
+++ b/SimTECH/SimTECH/Pages/Racing/PostRace.razor
@@ -4,10 +4,7 @@
         <MudItem xs=12>
             <MudPaper Elevation="15" Height="75px" Class="pa-4">
                 <MudStack Row="true" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Center">
-                    <div style="width: 30%">
-                        <MudText Typo="Typo.body2" Color="Color.Warning">This page is quite unfinished</MudText>
-                        <MudText Typo="Typo.body2" Color="Color.Error">Wtf so much free space?</MudText>
-                    </div>
+                    <div style="width: 30%"></div>
 
                     <MudText Typo="Typo.h3">Post race</MudText>
 
