Dialog improvements all around, explored some initial solutions for making use of setups

--- a/SimTECH/SimTECH/Components/ScreenshotButton.razor
+++ b/SimTECH/SimTECH/Components/ScreenshotButton.razor
@@ -12,7 +12,7 @@
 </MudButton>
 
 @code {
-    [Parameter] public string TargetId { get; set; }
+    [Parameter, EditorRequired] public string TargetId { get; set; }
     [Parameter] public Color Colour { get; set; } = Color.Primary;
     [Parameter] public bool FullWidth { get; set; } = false;
     [Parameter] public string Class { get; set; } = string.Empty;
