--- a/SimTECH/SimTECH/Pages/Racing/GapChartDialog.razor
+++ b/SimTECH/SimTECH/Pages/Racing/GapChartDialog.razor
@@ -1,13 +1,18 @@
 ﻿<MudDialog>
-    <TitleContent>
-        <MudIcon Icon="@Icons.Material.Filled.SsidChart" Class="mr-3 mb-n1" />
-        <MudText Typo="Typo.h5">Gapper race chart</MudText>
-    </TitleContent>
     <DialogContent>
-        <MudPaper MinWidth="900px" MinHeight="700px" Class="pa-4">
+        <MudPaper MinWidth="1500px" MinHeight="950px" Class="pa-4" id="gapper-chart-container">
+            <MudStack Row="true" AlignItems="AlignItems.Center" Class="px-0 pb-2">
+                <MudIcon Icon="@Icons.Material.Filled.SsidChart" Class="mr-3 mb-n1" />
+                <MudText Typo="Typo.h5">Gap to race leader</MudText>
+                <MudSpacer />
+                <MudButtonGroup Variant="Variant.Text" Color="Color.Secondary">
+                    <ScreenshotIconButton TargetId="gapper-chart-container" />
+                    <MudIconButton Icon="@Icons.Material.Filled.Close" OnClick="@(() => ChartDialog?.Close())" />
+                </MudButtonGroup>
+            </MudStack>
             @if (!loading)
             {
-                <ApexCharts.ApexChart TItem="DataPoint" Title="Gaps to leader" Options="@options" Height="700" Width="900">
+                <ApexCharts.ApexChart TItem="DataPoint" Title="Gaps to leader" Options="@options" Width="1400" Height="900">
                     @foreach (var driver in dataSets)
                     {
                         <ApexCharts.ApexPointSeries TItem="DataPoint"
@@ -38,8 +43,10 @@
     {
         options = Constants.ChartOptionsDefault;
 
+        options.Yaxis = new();
+        options.Yaxis.Add(new ApexCharts.YAxis { Reversed = true });
+
         var leaderScores = Drivers.First(e => e.Position == 1).LapScores;
-        var amountCalculated = leaderScores.Count;
 
         var seenTeamIdentifiers = new List<long>(Drivers.Count);
 
@@ -48,19 +55,18 @@
             var dataSet = new DataSet { Label = driver.FullName };
 
             int gap = 0;
-            for (int i = 0; i < driver.LapScores.Count; i++)
+            foreach (var driverScore in driver.LapScores.OrderBy(e => e.Order))
             {
-                var compareSet = leaderScores[i];
-                var driverScore = driver.LapScores[i];
+                var compareLeader = leaderScores.First(e => e.Order == driverScore.Order);
 
-                gap += compareSet.Score - driverScore.Score;
+                gap += compareLeader.Score - driverScore.Score;
 
-                dataSet.DataPoints.Add(new DataPoint(compareSet.Order, gap));
+                dataSet.DataPoints.Add(new DataPoint(driverScore.Order, gap));
             }
 
             var sameSeenTeams = seenTeamIdentifiers.Count(e => e == driver.SeasonTeamId);
 
-            dataSet.Stroke = new ApexCharts.SeriesStroke { Color = driver.Colour, DashSpace = (2 * sameSeenTeams), Width = 3 };
+            dataSet.Stroke = new ApexCharts.SeriesStroke { Color = driver.Colour, DashSpace = (2 * sameSeenTeams), Width = 4 };
 
             seenTeamIdentifiers.Add(driver.SeasonTeamId);
             dataSets.Add(dataSet);
