--- a/SimTECH/SimTECH/Pages/Racing/PositionChangeChart.razor
+++ b/SimTECH/SimTECH/Pages/Racing/PositionChangeChart.razor
@@ -1,12 +1,18 @@
 ﻿<MudDialog>
-    <TitleContent>
-        <MudText Typo="Typo.h5">Position change chart</MudText>
-    </TitleContent>
     <DialogContent>
-        <MudPaper MinWidth="900px" MinHeight="600px" Class="pa-4">
+        <MudPaper MinWidth="1500px" MinHeight="950px" Class="pa-4" id="position-chart-container">
+            <MudStack Row="true" AlignItems="AlignItems.Center" Class="px-0 pb-2">
+                <MudIcon Icon="@Icons.Material.Filled.SsidChart" Class="mr-3 mb-n1" />
+                <MudText Typo="Typo.h5">Position evolution & retirements</MudText>
+                <MudSpacer />
+                <MudButtonGroup Variant="Variant.Text" Color="Color.Secondary">
+                    <ScreenshotIconButton TargetId="position-chart-container" />
+                    <MudIconButton Icon="@Icons.Material.Filled.Close" OnClick="Close" />
+                </MudButtonGroup>
+            </MudStack>
             @if (!loading)
             {
-                <ApexCharts.ApexChart TItem="DataPoint" Title="Position progression" Options="@options" Height="500">
+                <ApexCharts.ApexChart TItem="DataPoint" Options="@options" Width="1400" Height="900">
                     @foreach (var driver in dataSets)
                     {
                         <ApexCharts.ApexPointSeries TItem="DataPoint"
@@ -45,8 +51,8 @@
             Label = "Retirements",
             Stroke = new ApexCharts.SeriesStroke
             {
-                Color = "#FF4A6B66", // trans-red: #FF4D4D77 #D11D3E44  #FF4A6B66
-                Width = 1,
+                Color = "#E0284A7F",
+                Width = 3,
             },
         };
 
@@ -78,7 +84,7 @@
 
             var sameSeenTeams = seenTeamIdentifiers.Count(e => e == driver.SeasonTeamId);
 
-            dataSet.Stroke = new ApexCharts.SeriesStroke { Color = driver.Colour, DashSpace = (2 * sameSeenTeams), Width = 5 };
+            dataSet.Stroke = new ApexCharts.SeriesStroke { Color = driver.Colour, DashSpace = (2 * sameSeenTeams), Width = 4 };
 
             seenTeamIdentifiers.Add(driver.SeasonTeamId);
             dataSets.Add(dataSet);
@@ -88,11 +94,6 @@
         options.Yaxis.Add(new ApexCharts.YAxis { SeriesName = "Retirements", Min = 1, Max = driverCount, Show = false });
 
         loading = false;
-    }
-
-    public void TestActionMutate(ApexCharts.DataPoint<DataPoint> dataPoint)
-    {
-        var originalValue = dataPoint.Y;
     }
 
     private List<DriverLapPosition> DetermineLapPositions()
@@ -131,6 +132,8 @@
 
         return positionData;
     }
+
+    private void Close() => ChartDialog?.Close();
 
     internal class DriverLapPosition
     {
